--- a/.ci/docker/buildtools-windows/Dockerfile
+++ b/.ci/docker/buildtools-windows/Dockerfile
@@ -9,12 +9,15 @@ SHELL ["cmd", "/S", "/C"]
 # Download NuGet v5.4.0 
 ADD https://dist.nuget.org/win-x86-commandline/v5.4.0/nuget.exe C:\nuget\nuget.exe
 
-# Download .net Core
+# Download .net Core3.1
 Add https://dot.net/v1/dotnet-install.ps1 c:\temp\dotnet-install.ps1
-RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 3.1 -InstallDir C:\DotNetCore
+RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 3.1 -InstallDir C:\DotNetCore3.1
+
+# Download .net Core2.1
+RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 2.1 -InstallDir C:\DotNetCore2.1
 
 # Add NuGet to Beginning of Path (We want this version of Nuget before any other versions that may be in the path)
-RUN setx /M PATH "C:\nuget;%PATH%;C:\DotNetCore;"
+RUN setx /M PATH "C:\nuget;%PATH%;C:\DotNetCore3.1;C:\DotNetCore2.1;"
 
 # We download Visual Studio from Microsoft
 # If this fails see the Readme: https://github.com/elastic/apm-agent-dotnet/tree/master/.ci/docker/buildtools-windows
