--- a/.ci/docker/buildtools-windows/Dockerfile
+++ b/.ci/docker/buildtools-windows/Dockerfile
@@ -10,14 +10,14 @@ SHELL ["cmd", "/S", "/C"]
 ADD https://dist.nuget.org/win-x86-commandline/v5.4.0/nuget.exe C:\nuget\nuget.exe
 
 # Download .net Core3.1
-Add https://dot.net/v1/dotnet-install.ps1 c:\temp\dotnet-install.ps1
-RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 3.1 -InstallDir C:\DotNetCore3.1
+#Add https://dot.net/v1/dotnet-install.ps1 c:\temp\dotnet-install.ps1
+#RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 3.1 -InstallDir C:\DotNetCore3.1
 
 # Download .net Core3.0
-RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 3.0 -InstallDir C:\DotNetCore3.0
+#RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 3.0 -InstallDir C:\DotNetCore3.0
 
 # Download .net Core2.1
-RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 2.1 -InstallDir C:\DotNetCore2.1
+#RUN powershell -File c:\temp\dotnet-install.ps1 -Channel 2.1 -InstallDir C:\DotNetCore2.1
 
 # Add NuGet to Beginning of Path (We want this version of Nuget before any other versions that may be in the path)
 RUN setx /M PATH "C:\nuget;%PATH%;C:\DotNetCore2.1;C:\DotNetCore3.1;C:\DotNetCore3.0;"
@@ -32,6 +32,7 @@ RUN C:\temp\vs_enterprise.exe `
                 --wait `
                 --norestart `
                 --nocache `
+                --add Microsoft.NetCore.Component.SDK `
                 --add Microsoft.Net.Core.Component.SDK.2.1 `
                 --add Microsoft.VisualStudio.Component.Web `
                 --add Microsoft.Component.MSBuild
