Add Microsoft.NETFramework.ReferenceAssemblies to root directory build props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,4 +8,7 @@
     <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All"/>
+  </ItemGroup>
 </Project>
