--- a/.ci/docker/sdk-linux/Dockerfile
+++ b/.ci/docker/sdk-linux/Dockerfile
@@ -20,5 +20,23 @@ RUN apt update \
  && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
  && apt -qq update \
  && apt-get -qq install -y docker-ce docker-ce-cli containerd.io \
-    --no-install-recommends \
- && rm -rf /var/lib/apt/lists/*
+    --no-install-recommends
+
+# Install mono
+ENV MONO_VERSION 6.8.0.96
+
+RUN apt -qq update \
+  && apt-get -qq install -y --no-install-recommends gnupg dirmngr \
+  && rm -rf /var/lib/apt/lists/* \
+  && export GNUPGHOME="$(mktemp -d)" \
+  && gpg --batch --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
+  && gpg --batch --export --armor 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF > /etc/apt/trusted.gpg.d/mono.gpg.asc \
+  && gpgconf --kill all \
+  && rm -rf "$GNUPGHOME" \
+  && apt-key list | grep Xamarin \
+  && apt-get purge -y --auto-remove gnupg dirmngr
+
+RUN echo "deb http://download.mono-project.com/repo/debian stable-stretch/snapshots/$MONO_VERSION main" > /etc/apt/sources.list.d/mono-official-vs.list \
+  && apt -qq update \
+  && apt-get -qq install -y mono-runtime \
+  && rm -rf /var/lib/apt/lists/* /tmp/*
