--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,6 +6,7 @@
 
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile Condition="EXISTS('../../../../../../build/elasticapm.snk')">../../../../../../build/elasticapm.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
   </PropertyGroup>
   <ItemGroup>
