--- a/src/Elastic.Apm.Elasticsearch/Elastic.Apm.Elasticsearch.csproj
+++ b/src/Elastic.Apm.Elasticsearch/Elastic.Apm.Elasticsearch.csproj
@@ -18,8 +18,7 @@
     <PackageTags>apm, monitoring, elastic, elasticapm, analytics, elasticsearch, NEST</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-<!--    <PackageReference Include="Elasticsearch.Net" Version="7.0.0" />-->
-    <PackageReference Include="Elasticsearch.Net" Version="7.5.0-ci20191211T182420" />
+    <PackageReference Include="Elasticsearch.Net" Version="7.6.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
