--- a/src/ElasticApmStartupHook/ElasticApmStartupHook.csproj
+++ b/src/ElasticApmStartupHook/ElasticApmStartupHook.csproj
@@ -10,7 +10,7 @@
 <!--  </Target>-->
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
