--- a/src/ElasticApmStartupHook/ElasticApmStartupHook.csproj
+++ b/src/ElasticApmStartupHook/ElasticApmStartupHook.csproj
@@ -1,23 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  
-  <ItemGroup>
-    <PackageReference Include="ILMerge" Version="3.0.29" />
-  </ItemGroup>
-
-<!--  <Target Name="ILMerge">-->
-<!--    &lt;!&ndash; the ILMergePath property points to the location of ILMerge.exe console application &ndash;&gt;-->
-<!--    <Exec Command="$(ILMergeConsolePath) /out:Merged.dll" />-->
-<!--  </Target>-->
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyName>ElasticApmAgentStartupHook</AssemblyName>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Elastic.Apm.AspNetCore\Elastic.Apm.AspNetCore.csproj" />
     <ProjectReference Include="..\Elastic.Apm.EntityFrameworkCore\Elastic.Apm.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Elastic.Apm.SqlClient\Elastic.Apm.SqlClient.csproj" />
     <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
   </ItemGroup>
-
 </Project>
