extension method on HttpConfiguration

--- a/src/Elastic.Apm.AspNet.WebApi.SelfHost/Elastic.Apm.AspNet.WebApi.SelfHost.csproj
+++ b/src/Elastic.Apm.AspNet.WebApi.SelfHost/Elastic.Apm.AspNet.WebApi.SelfHost.csproj
@@ -10,7 +10,11 @@
 
     <ItemGroup>
       <Reference Include="System.Configuration" />
-      <Reference Include="System.Web" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <!-- todo: check the lowest possible version -->
+      <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     </ItemGroup>
 
 </Project>
