Elasticsearch Client Instrumentation (#329)
* Add Elastisearch to team shared dictionary

* initial commit

* clean up implemntations and error reporting

* always add frames

* Initial stab at tests using prerelease package

* Linux compilation fixes being bit by: https://github.com/SpecFlowOSS/SpecFlow/issues/1912

* Introduce more unit tests around Elasticsearch integration

* remove unused variable

* Remove dependency on Elastic.Managed.Ephemeral

Only used in example project, switched to one that talks to
elastic/apm-integration-testing.

* bump Elasticsearch.Net reference

* Apply suggestions from code review

Co-authored-by: Gergely Kalapos <gergo@kalapos.net>

* Log DiagnosticEventKey on Trace

* Try catch around calling OnNext()

* update failing test, assertion could never be satisfied, Added assertions on reported exception

Co-authored-by: Gergely Kalapos <gergo@kalapos.net>

--- a/src/Elastic.Apm/Elastic.Apm.csproj
+++ b/src/Elastic.Apm/Elastic.Apm.csproj
@@ -8,6 +8,7 @@
     <PackageId>Elastic.Apm</PackageId>
     <Description>Elastic APM .NET Agent base package. This package provides core functionality for transmitting of all Elastic APM types and is a dependent package for all other Elastic APM package. Additionally this package contains the public Agent API that allows you to manually capture transactions and spans. Please install the platform specific package for the best experience. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
     <PackageTags>apm, monitoring, elastic, elasticapm, analytics, sdk</PackageTags>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="4.5.0" />
