--- a/src/Elastic.Apm.Extensions.Hosting/Elastic.Apm.Extensions.Hosting.csproj
+++ b/src/Elastic.Apm.Extensions.Hosting/Elastic.Apm.Extensions.Hosting.csproj
@@ -4,7 +4,7 @@
       <PackageId>Elastic.Apm.Extensions.Hosting</PackageId>
       <Description>NEED TO BE ADDED</Description>
       <PackageTags>apm, monitoring, elastic, elasticapm, analytics, netcore</PackageTags>
-      <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0;netcoreapp3.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,7 +16,7 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
     </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.1' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
   </ItemGroup>
