--- a/src/Elastic.Apm.EntityFramework6/Elastic.Apm.EntityFramework6.csproj
+++ b/src/Elastic.Apm.EntityFramework6/Elastic.Apm.EntityFramework6.csproj
@@ -6,7 +6,15 @@
     <PackageId>Elastic.Apm.EntityFramework6</PackageId>
     <Description>Elastic APM for Entity Framework 6. This package contains auto instrumentation for Entity Framework 6. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
     <PackageTags>apm, monitoring, elastic, elasticapm, analytics, entiryframework6, ef6</PackageTags>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.2.0" />
   </ItemGroup>
