[COMMIT] The proj files have been updated to enable SourceLink [Elastic.Apm.Elasticsearch.csproj]

--- a/src/Elastic.Apm.Elasticsearch/Elastic.Apm.Elasticsearch.csproj
+++ b/src/Elastic.Apm.Elasticsearch/Elastic.Apm.Elasticsearch.csproj
@@ -16,7 +16,15 @@
     <PackageIconUrl>https://raw.githubusercontent.com/elastic/apm-agent-dotnet/master/build/nuget-icon.png</PackageIconUrl>
     <Description>Elastic APM for the Elasticsearch .NET clients. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
     <PackageTags>apm, monitoring, elastic, elasticapm, analytics, elasticsearch, NEST</PackageTags>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Elasticsearch.Net" Version="7.6.0" />
   </ItemGroup>
